# pyrasp

./: .gitignore  LAMBDA-LAYERS.md  README.md  RELEASE-NOTES.md  RELEASE-NOTES.txt  config.json  config.tmpl.json  main.py  pyproject.toml  requirements.txt
pyrasp/: pyrasp.py  pyrasp_data.py  pyrasp_gpt.py
pyrasp/data/: sqli_model-1.0.0  sqli_model-1.1.0  sqli_model-2.0.0  sqli_model-3.0.0  sqli_model-3.1.0  xss_model-1.0.0  xss_model-1.1.0  xss_model-1.2.0  xss_model-2.0.0  xss_model-3.0.0  xss_model-3.1.0
