[project]
name = "pyrasp"
version = "0.4.4"
authors = [
    { name = "Renaud Bidou", email = "renaud@paracyberbellum.io" }
]
description = "Python RASP"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
keywords = [ "rasp", "web application", "security", "xss", "sql injection", "waf", "dlp" ]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Framework :: Flask"
]
dependencies = [
  "sqlparse", 
  "scikit-learn==1.3.0",
  "requests",
  "psutil"
]

[project.urls]
Homepage = "https://github.com/rbidou/pyrasp"
Documentation = "https://github.com/rbidou/pyrasp"

[tool.setuptools.package-data]
pyrasp = ["data/*"]

